fix alignment in footer

--- a/app/styles/app/layouts/footer.sass
+++ b/app/styles/app/layouts/footer.sass
@@ -20,6 +20,7 @@ footer
   a
     display         : block
     color           : $footer-color
+    vertical-align: middle
 
 .wrapper
   padding-bottom: 334px
@@ -44,6 +45,8 @@ footer h3
 footer .row p
   display : inline-block
   margin  : 0
+  color: $footer-color
+  line-height: 23px
 
 footer .row
   max-width: 1024px
